[package]
name = "geoip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
maxminddb = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["ansi", "fmt"], default-features = false }
